# mandelbrot-viewer

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  main.c
src/: gtk.c  main.c
